crates/squealy/tests/compile_fail/case_branch_type_mismatch.stderr
error[E0271]: type mismatch resolving `<i32 as ExprKind>::Value == String`
  --> tests/compile_fail/case_branch_type_mismatch.rs:23:64
   |
23 |         .select(|(user,)| case().when(user.id.greater_than(1), 1).otherwise("nope"));
   |                                  ----                          ^ expected `String`, found `i32`
   |                                  |
   |                                  required by a bound introduced by this call
   |
note: required by a bound in `CaseBuilder::<'scope, T, Arms>::when`
  --> src/expr.rs
   |
   |     pub fn when<P, PredAst, E>(
   |            ---- required by a bound in this associated function
...
   |         E::Kind: ExprKind<Value = T>,
   |                           ^^^^^^^^^ required by this bound in `CaseBuilder::<'scope, T, Arms>::when`
